|21-12-22| add feature for add customer option for admin ***geting data is not full its jest get country code***

--- a/templates/adm/admin-base.html
+++ b/templates/adm/admin-base.html
@@ -62,7 +62,7 @@
                   <i class="ni ni-circle-08 text-yellow"></i>
                   <span class="nav-link-text">Customer</span>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="">Add Customer</a>
+                    <a class="dropdown-item" href="{% url 'add-customer' %}">Add Customer</a>
                     <a class="dropdown-item" href="">Manage Customer</a>
                     <a class="dropdown-item" href="">List Customer</a>
                   </div>
