|21-12-22| customar details page designed customer basic details dynamically added ***fix add customer page erro , make domain name dynamic***

--- a/templates/adm/list-customer.html
+++ b/templates/adm/list-customer.html
@@ -72,7 +72,7 @@
             <td>{{customer.Mobile}}</td>
             <td>{{customer.Domains}}</td>
             <td>
-              <a href=""><button class="btn btn-success">view</button></a>
+              <a href="{% url 'customer-details' customer.Name %}"><button class="btn btn-success">view</button></a>
             </td>
             <td>
               <a href=""><button class="btn btn-primary">Edit</button></a>
