--- a/templates/adm/admin-base.html
+++ b/templates/adm/admin-base.html
@@ -69,7 +69,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="{% url 'add-domain' %}">
                   <i class="ni ni-world-2 text-dark"></i>
                   <span class="nav-link-text">Add Domain</span>
                 </a>
