--- a/templates/adm/admin-base.html
+++ b/templates/adm/admin-base.html
@@ -76,7 +76,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="{% url 'tickets' %}">
                   <i class="ni ni-archive-2 text-dark"></i>
                   <span class="nav-link-text">List Support Ticket</span>
                 </a>
